--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
         font-family: myFont;
-        src: url(coolvetica.ttf.otf);
+        src: url(coolvetica(1).ttf.otf);
 }
 * {
   margin: 0;
