--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @font-face {
         font-family: myFont;
-        src: url(coolvetica(1).ttf.otf);
+        src: url(coolvetica.ttf.otf);
 }
 * {
   margin: 0;
@@ -11,7 +11,7 @@
 @font-face {
 
     font-family: metro;
-    src: url(metro-light(1).ttf.otf);
+    src: url(metro-light.ttf.otf);
 }
 
 @media (max-width: 900px) {
